--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "sim-build": "webpack && ts-node ./src/server/server.ts",
     "start": "webpack serve",
     "start-server": "nodemon ./src/server/server.ts"
   },
@@ -29,8 +30,6 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
@@ -38,6 +37,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
     "ws": "^8.8.1"
   },
   "engines": {
