--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "sim-build": "webpack && ts-node ./src/server/server.ts",
-    "start": "webpack serve",
-    "start-server": "nodemon ./src/server/server.ts"
+    "build": "webpack --mode=production",
+    "sim-build": "webpack --mode=production && cross-env NODE_ENV=production PORT=3333 ts-node ./src/server/server.ts",
+    "start": "webpack --mode=development serve",
+    "start-server": "cross-env NODE_ENV=development nodemon ./src/server/server.ts"
   },
   "keywords": [],
   "author": "Racila Stefan",
   "license": "ISC",
   "devDependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "@svgr/webpack": "^6.3.1",
     "@types/node": "^18.6.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.17.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "formik": "^2.2.9",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
@@ -32,7 +38,8 @@
     "ts-loader": "^9.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "yup": "^0.32.11"
   },
   "dependencies": {
     "react": "^18.2.0",
