--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@types/webpack-env": "^1.17.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "formik": "^2.2.9",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.19",
     "react-router-dom": "^6.3.0",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
